--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-auth-session": "~3.6.1",
+    "expo-random": "~12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
