--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "expo-auth-session": "~3.6.1",
-    "expo-random": "~12.2.0"
+    "expo-random": "~12.2.0",
+    "expo-secure-store": "~11.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
