--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@octokit/rest": "^18.12.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-random": "~12.2.0",
+    "expo-secure-store": "~11.2.0",
     "expo-status-bar": "~1.3.0",
     "native-base": "^3.4.6",
     "react": "17.0.2",
@@ -20,10 +25,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7",
-    "expo-auth-session": "~3.6.1",
-    "expo-random": "~12.2.0",
-    "expo-secure-store": "~11.2.0"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
