--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-random": "~12.2.0",
     "expo-secure-store": "~11.2.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^8.2.3",
     "native-base": "^3.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
